blackroad-sf/force-app/main/default/objects/AgentDeployment__c/AgentDeployment__c.object-meta.xml
<CustomObject>
    <label>Agent Deployment</label>
    <pluralLabel>Agent Deployments</pluralLabel>
    <nameField>
        <label>Deployment ID</label>
        <type>AutoNumber</type>
        <displayFormat>DEP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks every agent deployment across all 17 orgs, 1825+ repos. Free audit trail in Salesforce.</description>
</CustomObject>