blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/CommitSHA__c.field-meta.xml
<CustomField>
    <fullName>CommitSHA__c</fullName>
    <label>Commit SHA</label>
    <type>Text</type>
        <length>40</length>
    
</CustomField>