blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/CostUSD__c.field-meta.xml
<CustomField>
    <fullName>CostUSD__c</fullName>
    <label>Cost (USD)</label>
    <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    
</CustomField>