blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/DeployedAt__c.field-meta.xml
<CustomField>
    <fullName>DeployedAt__c</fullName>
    <label>Deployed At</label>
    <type>DateTime</type>
    
</CustomField>