blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/DeployType__c.field-meta.xml
<CustomField>
    <fullName>DeployType__c</fullName>
    <label>Deploy Type</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>workflow</fullName>
                <default>true</default>
                <label>workflow</label>
            </value>
            <value>
                <fullName>agents_md</fullName>
            </value>
            <value>
                <fullName>config</fullName>
            </value>
            <value>
                <fullName>full_sync</fullName>
            </value>
            <value>
                <fullName>worker</fullName>
            </value>
            <value>
                <fullName>modelfile</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>