blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>queued</fullName>
                <default>true</default>
                <label>queued</label>
            </value>
            <value>
                <fullName>running</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>skipped</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>