blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/TriggerSource__c.field-meta.xml
<CustomField>
    <fullName>TriggerSource__c</fullName>
    <label>Trigger Source</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>github_actions</fullName>
                <default>true</default>
                <label>github_actions</label>
            </value>
            <value>
                <fullName>manual</fullName>
            </value>
            <value>
                <fullName>scheduled</fullName>
            </value>
            <value>
                <fullName>webhook</fullName>
            </value>
            <value>
                <fullName>br_cli</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>