blackroad-sf/force-app/main/default/objects/AgentDeployment__c/fields/WorkflowRunUrl__c.field-meta.xml
<CustomField>
    <fullName>WorkflowRunUrl__c</fullName>
    <label>Workflow Run URL</label>
    <type>Url</type>
    
</CustomField>